--- a/lang/vi.json
+++ b/lang/vi.json
@@ -1,11 +1,11 @@
 {
-  "app_name": "C.A.C Báo giá",
+  "app_name": "Nội thất C.A.C",
   "title_hello": "Chào bạn",
   "title_login_screen": "Đăng nhập",
   "title_report": "Phản ánh",
   "title_create_report": "Thêm địa điểm",
   "title_update_report": "Cập nhật địa điểm",
-  "title_paht": "C.A.C Báo giá",
+  "title_paht": "Nội thất C.A.C",
   "title_verification_request": "Gửi yêu cầu xác minh",
   "title_update_verification_request": "Cập nhật yêu cầu xác minh",
   "title_news_verification": "Xác minh tin tức",
