--- a/lang/vi.json
+++ b/lang/vi.json
@@ -1,7 +1,7 @@
 {
   "app_name": "Nội thất C.A.C",
   "title_hello": "Chào bạn",
-  "title_login_screen": "Đăng nhập",
+  "title_login_screen": "Đăng Nhập",
   "title_report": "Phản ánh",
   "title_create_report": "Thêm địa điểm",
   "title_update_report": "Cập nhật địa điểm",
